--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class="img">
                   <img
-                    src="/Project_1/assets/img/bandmember.jpg"
+                    src="./assets/img/bandmember.jpg"
                     alt="Band Music"
                   />
                 </div>
@@ -99,7 +99,7 @@
                 </div>
                 <div class="img">
                   <img
-                    src="/Project_1/assets/img/bandmember.jpg"
+                    src="./assets/img/bandmember.jpg"
                     alt="Band Music"
                   />
                 </div>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="img">
                   <img
-                    src="/Project_1/assets/img/bandmember.jpg"
+                    src="./assets/img/bandmember.jpg"
                     alt="Band Music"
                   />
                 </div>
@@ -141,7 +141,7 @@
               <div class="col-third text-align col-mobile">
                 <img
                   class="img-tour"
-                  src="/Project_1/assets/img/newyork.jpg"
+                  src="./assets/img/newyork.jpg"
                   alt=""
                 />
                 <div class="text">
@@ -157,7 +157,7 @@
               <div class="col-third text-align col-mobile">
                 <img
                   class="img-tour"
-                  src="/Project_1/assets/img/paris.jpg"
+                  src="./assets/img/paris.jpg"
                   alt=""
                 />
                 <div class="text">
@@ -173,7 +173,7 @@
               <div class="col-third text-align col-mobile">
                 <img
                   class="img-tour"
-                  src="/Project_1/assets/img/sanfran.jpg"
+                  src="./assets/img/sanfran.jpg"
                   alt=""
                 />
                 <div class="text">
@@ -269,6 +269,6 @@
     </div>    
     </div>
   </div>
-  <script src="/Project_1/assets/js/main.js"></script>
+  <script src="./assets/js/main.js"></script>
   </body>
 </html>
